# Linux_MTA

./: Makefile  Q1.c  Q1.h  Q2.c  Q2.h  Q3.c  Q3.h  README.md  README.txt  RefreshDB.c  Utilities.c  Utilities.h  compiling.sh  flightScanner.sh  full_schedule.c  makefiles
Assignment#1/: Makefile  Q1.h  Q3.h  README.txt  RefreshDB.c  airplane.c  arrivals.c
Assignment#2/: CMakeLists.txt  README.txt  Utilities.c  Utilities.h  flightScanner.sh  main.c
Assignment#2/flightsDB/EGGW/: EGGW.arv  EGGW.dpt
Assignment#2/flightsDB/LLBG/: LLBG.arv  LLBG.dpt
Assignment#3/: Assignment#3_Ben_Elior_Smadar.sh  README.txt
Assignment#3/DBService/: CMakeLists.txt  Dockerfile  Utilities.h  dbFuncts.c  dbService.c  dbServiceFuncts.c  directoryFuncts.c  fileFuncts.c  generalFuncts.c  zipFuncts.c
Assignment#3/FlightsService/: CMakeLists.txt  Dockerfile  FlightService.c  Utilities.c  Utilities.h
Assignment#3/child_proccess/: Utillities.c  Utillities.h  dbService.c
Assignment#3/child_process/: CMakeLists.txt  Utilities.c  Utilities.h  dbService.c
Assignment#3/child_process/flightsDB/EGKK/: EGKK.arv  EGKK.dpt
Assignment#3/main_proccess/: FlightService.c  Utillities.c  Utillities.h
Assignment#3/main_process/: FlightService.c  Utilities.c  Utilities.h
Bash/: flightScanner.sh
C Files/: Q1.c  Q1_main.c  Q2.c  Q3.c  Utilities.c  airplane.c  arrival.out  arrivals.c  full_schedule.c  main.c
H Files/: Q2.h  Q3.h  Utilities.h
Test Files/: test.csv
